login interface half done?

--- a/SEngBytesBits/web/index.html
+++ b/SEngBytesBits/web/index.html
@@ -6,7 +6,9 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <a href="Interfaces/Login" target="_blank" STYLE="text-decoration: none">
+          <title>TODO supply a title</title>
+        </a>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
