--- a/SEngBytesBits/web/index.html
+++ b/SEngBytesBits/web/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <a href="Interfaces/Login" target="_blank" STYLE="text-decoration: none">
+        <a href="SEngBytesBits/Login" target="_blank" STYLE="text-decoration: none">
           <title>TODO supply a title</title>
         </a>
         <meta charset="UTF-8">
