--- a/SEngBytesBits/web/index.html
+++ b/SEngBytesBits/web/index.html
@@ -12,7 +12,14 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+    <body background="back1.jpg">
+        <div class='container-fluid login-container'
+        <h2 align="center"><font size="10">SEng Bytes & Bits</font></h2>
+        </div>
+        <table align="center" cellspacing="30" cellpadding="0"> <tr> 
+        <td align="center" width="300" height="40" bgcolor="#F86A95" style="-webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; color: #ffffff; display: block;">
+        <a href="Login" style="font-size:16px; font-weight: bold; font-family: Helvetica, Arial, sans-serif; text-decoration: none; line-height:40px; width:100%; display:inline-block"><span style="color: #FFFFFF">Login</span></a>
+        </td> 
+        </tr> </table> 
+
 </html>
