HTML template menu and Ver articulos interfaz

--- a/SEngBytesBits/web/Articulos.html
+++ b/SEngBytesBits/web/Articulos.html
@@ -39,7 +39,7 @@
 				margin: 0;
 				padding: 80px;
 				padding-left: 20px;
-				padding-top: 35px;
+				padding-top: 45px;
 				padding-bottom: 20px;
 			}
 		</style>
@@ -48,7 +48,7 @@
 	<body>
 		<ul class="fan">
 			<li>MENU</li>
-			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Ver Articulos</a></li>
+			<li><a href = "VerArticulos" STYLE= "text-decoration:none">Ver Articulos</a></li>
 			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Ver Revistas</a></li>
 			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Ver Suscriptores</a></li>
 			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Ver Autores</a></li>
