All interfaces with template

--- a/SEngBytesBits/web/MenuPrincipal.html
+++ b/SEngBytesBits/web/MenuPrincipal.html
@@ -49,20 +49,20 @@
 		<ul class="fan">
 			<li>MENU</li>
 			<li><a href = "VerArticulos" STYLE= "text-decoration:none">Ver Articulos</a></li>
-			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Ver Revistas</a></li>
-			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Ver Suscriptores</a></li>
-			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Ver Autores</a></li>
-			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Analisis Revista</a></li>
-			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Analisis Suscriptor</a></li>
-			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Analisis Autor</a></li>
-			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Buscar Autor</a></li>
-			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Crear Suscriptor</a></li>
-			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Buscar Articulo</a></li>
-			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Votar por Articulo</a></li>
-			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Crear Carta Editor</a></li>
-			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Aprobar Juez</a></li>
-			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Hacer Pedido</a></li>
-			<li><a href = "http://www.google.com" STYLE= "text-decoration:none">Administrar Pagos</a></li>
+			<li><a href = "VerRevistas" STYLE= "text-decoration:none">Ver Revistas</a></li>
+			<li><a href = "VerSuscriptores" STYLE= "text-decoration:none">Ver Suscriptores</a></li>
+			<li><a href = "VerAutores" STYLE= "text-decoration:none">Ver Autores</a></li>
+			<li><a href = "AnaRevista" STYLE= "text-decoration:none">Analisis Revista</a></li>
+			<li><a href = "AnaSuscriptor" STYLE= "text-decoration:none">Analisis Suscriptor</a></li>
+			<li><a href = "AnaAutor" STYLE= "text-decoration:none">Analisis Autor</a></li>
+			<li><a href = "BuscarAutor" STYLE= "text-decoration:none">Buscar Autor</a></li>
+                        <li><a href = "BuscarArticulo" STYLE= "text-decoration:none">Buscar Articulo</a></li>
+			<li><a href = "CrearSuscriptor" STYLE= "text-decoration:none">Crear Suscriptor</a></li>
+                        <li><a href = "CrearCarta" STYLE= "text-decoration:none">Crear Carta Editor</a></li>
+			<li><a href = "VotarArticulo" STYLE= "text-decoration:none">Votar por Articulo</a></li>
+			<li><a href = "AprobarJuez" STYLE= "text-decoration:none">Aprobar Juez</a></li>
+			<li><a href = "HacerPedido" STYLE= "text-decoration:none">Hacer Pedido</a></li>
+			<li><a href = "AdministrarPago" STYLE= "text-decoration:none">Administrar Pagos</a></li>
 		</ul>
 
 		<script src="stroll.js"></script>
@@ -84,8 +84,6 @@
 
 
 		<!-- Third party shizzle -->
-
-		<a href="https://github.com/hakimel/stroll.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/camo.github.com/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub"></a>
 
 		<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 
