Bugs in menus, background new, login color

--- a/SEngBytesBits/web/index.html
+++ b/SEngBytesBits/web/index.html
@@ -19,7 +19,7 @@ and open the template in the editor.
     <body background="back1.jpg">
         
         <table align="center" cellspacing="30" cellpadding="0"> <tr> 
-        <td align="center" width="300" height="40" bgcolor="#000000" style="-webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; color: #ffffff; display: block;">
+        <td align="center" width="300" height="40" bgcolor="#0DCFAF" style="-webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; color: #ffffff; display: block;">
         <a href="Login" style="font-size:16px; font-weight:normal; font-family: Helvetica, Arial, sans-serif; text-decoration: none; line-height:40px; width:100%; display:inline-block"><span style="color: #FFFFFF">Login</span></a>
         </td> 
         </tr> </table> 
