--- a/SEngBytesBits/web/MenuPrincipal.html
+++ b/SEngBytesBits/web/MenuPrincipal.html
@@ -26,7 +26,7 @@
 				top: 1px;
 				left: 5px;
 				height: 300px;
-				width: 30%;
+				width: 300px;
 				margin: 0 auto;
 				margin-left: 0;
 				overflow-x: visible;
