--- a/SEngBytesBits/web/MenuPrincipal.html
+++ b/SEngBytesBits/web/MenuPrincipal.html
@@ -58,7 +58,7 @@
 			<li><a href = "BuscarAutor" STYLE= "text-decoration:none">Buscar Autor</a></li>
                         <li><a href = "BuscarArticulo" STYLE= "text-decoration:none">Buscar Articulo</a></li>
 			<li><a href = "CrearSuscriptor" STYLE= "text-decoration:none">Crear Suscriptor</a></li>
-                        <li><a href = "CrearCarta" STYLE= "text-decoration:none">Crear Carta Editor</a></li>
+                        <li><a href = "CrearCarta" STYLE= "text-decoration:none">Crear Articulo</a></li>
 			<li><a href = "VotarArticulo" STYLE= "text-decoration:none">Votar por Articulo</a></li>
 			<li><a href = "AprobarJuez" STYLE= "text-decoration:none">Aprobar Juez</a></li>
 			<li><a href = "HacerPedido" STYLE= "text-decoration:none">Hacer Pedido</a></li>
